--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,9 @@
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
                     {% endif %}{% endfor %}
+                    <li>
+                        <a href="http://demo.dsartisan.com/">讲师报名</a>
+                    </li>
                 </ul>
             </div>
         </div>
