remove  lecturer registration, add devfest2016

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
                     </li>
                     {% endif %}{% endfor %}
                     <li>
-                        <a href="http://demo.dsartisan.com/">讲师报名</a>
+                        <a href="http://devfest2016.gdgnanjing.com/">DevFest2016</a>
                     </li>
                 </ul>
             </div>
