--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
                     </li>
                     {% endif %}{% endfor %}
                     <li>
-                        <a href="http://devfest2016.gdgnanjing.com/">DevFest2016</a>
+                        <a href="http://gdgnanjing.com/devfest2017/">DevFest2017</a>
                     </li>
                 </ul>
             </div>
